testsuite/tests/rename/should_fail/T23570.hs
module T23570 where

import T23570_aux (T(..))

f :: C a => a -> T a ()
f = meth
